--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -1,8 +1,6 @@
 <div class="h-full flex items-center justify-end pr-6">
-  <a routerLink="/app/profile"
-    class="flex items-center gap-2 cursor-pointer">
-    <div
-      class="flex items-center justify-center w-8 h-8 rounded-full bg-bisque text-crater-brown font-bold">
+  <a routerLink="/app/profile" class="flex items-center gap-2 cursor-pointer">
+    <div class="flex items-center justify-center w-8 h-8 rounded-full bg-bisque text-crater-brown font-bold">
       {{ userName.charAt(0) }}
     </div>
     <span class="text-bisque font-semibold">
