--- a/src/app/components/app-layout/elements/topbar/topbar.component.html
+++ b/src/app/components/app-layout/elements/topbar/topbar.component.html
@@ -1,3 +1,4 @@
-<div class="w-full bg-crater-brown sticky h-12">
+<div class="w-full bg-crater-brown sticky h-12 flex flex-row items-center justify-end px-4">
+    <app-notification-bell></app-notification-bell>
     <app-my-account></app-my-account>
 </div>
