--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -1,28 +1,31 @@
-@if(!isrSimulationShown) {
-<form [formGroup]="formIsrSimulation" (ngSubmit)="onSubmit()"
-    class="flex flex-col space-y-4 bg-crater-brown p-6 rounded-md">
+@if(!isrSimulationShown && !ivaSimulationShown) {
+<form [formGroup]="type === 'isr' ? formIsrSimulation : formIvaSimulation" 
+      (ngSubmit)="type === 'isr' ? onSubmit() : onSubmitIVA()"
+      class="flex flex-col space-y-4 bg-crater-brown p-6 rounded-md">
+    
     <label for="type" class="text-base font-semibold text-bisque">Tipo de simulación:</label>
     <select id="simulationType"
         class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
-        (change)="changeType($event)" formControlName="simulationType">
+        (change)="changeType($event)" [value]="type">
         <option value="isr">Impuesto sobre la Renta (ISR)</option>
         <option value="iva">Impuesto sobre el Valor Agregado (IVA)</option>
     </select>
 
     @if (type === 'isr') {
+    <!-- Formulario ISR -->
     <label for="year" class="text-base font-semibold text-bisque">Año<span class="text-burnt-umber">*</span></label>
     <select id="year"
         class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
         formControlName="year">
         <option value="" disabled selected>Seleccione un año</option>
-        @for (year of loadInvoicesYears(invoiceService.invoicesByUserId$()); track year) {
+        @for (year of loadInvoicesYears(invoiceService.invoices$()); track year) {
         <option [value]="year">{{ year }}</option>
         }
-        @if (formIsrSimulation.controls['year'].invalid && (formIsrSimulation.controls['year'].dirty ||
-        formIsrSimulation.controls['year'].touched)) {
-        <div class="text-burnt-umber text-sm">El año es obligatorio.</div>
-        }
     </select>
+    @if (formIsrSimulation.controls['year'].invalid && (formIsrSimulation.controls['year'].dirty ||
+    formIsrSimulation.controls['year'].touched)) {
+    <div class="text-burnt-umber text-sm">El año es obligatorio.</div>
+    }
 
     <label for="childrenNumber" class="text-base font-semibold text-bisque">Número de hijos<span
             class="text-burnt-umber">*</span></label>
@@ -49,12 +52,46 @@
     </div>
     }
 
-    <button type="submit" [disabled]="formIsrSimulation.invalid"
+    @if (type === 'iva') {
+    <!-- Formulario IVA -->
+    <label for="ivaYear" class="text-base font-semibold text-bisque">Año<span class="text-burnt-umber">*</span></label>
+    <select id="ivaYear"
+        class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
+        formControlName="year">
+        <option value="" disabled>Seleccione un año</option>
+        @for (year of years; track year) {
+        <option [value]="year">{{ year }}</option>
+        }
+    </select>
+    @if (formIvaSimulation.controls['year'].invalid && (formIvaSimulation.controls['year'].dirty ||
+    formIvaSimulation.controls['year'].touched)) {
+    <div class="text-burnt-umber text-sm">El año es obligatorio.</div>
+    }
+
+    <label for="ivaMonth" class="text-base font-semibold text-bisque">Mes<span class="text-burnt-umber">*</span></label>
+    <select id="ivaMonth"
+        class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
+        formControlName="month">
+        <option value="" disabled>Seleccione un mes</option>
+        @for (month of months; track month.value) {
+        <option [value]="month.value">{{ month.name }}</option>
+        }
+    </select>
+    @if (formIvaSimulation.controls['month'].invalid && (formIvaSimulation.controls['month'].dirty ||
+    formIvaSimulation.controls['month'].touched)) {
+    <div class="text-burnt-umber text-sm">El mes es obligatorio.</div>
+    }
+    }
+
+    <button type="submit" 
+        [disabled]="type === 'isr' ? formIsrSimulation.invalid : formIvaSimulation.invalid"
         class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque disabled:bg-flamenco">
-        Crear simulación
+        Crear simulación {{type === 'isr' ? 'ISR' : 'IVA'}}
     </button>
 </form>
-} @else {
+}
+
+@if (isrSimulationShown && isrSimulation) {
 <div>
     <app-isr-simulation [simulationPeriod]="isrSimulation.simulationPeriod"
         [simulationName]="isrSimulation.simulationName"
@@ -86,6 +123,18 @@
         [totalNetTax]="isrSimulation.totalNetTax" [interests]="isrSimulation.interests"
         [totalTaxDebt]="isrSimulation.totalTaxDebt" [requestedCompensation]="isrSimulation.requestedCompensation"
         [totalDebtToPay]="isrSimulation.totalDebtToPay" />
+    <div class="flex justify-center mt-4">
+        <button (click)="closeSimulation()"
+            class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
+            Regresar
+        </button>
+    </div>
+</div>
+}
+
+@if (ivaSimulationShown && ivaSimulation) {
+<div>
+    <app-iva-simulation [simulation]="ivaSimulation" />
     <div class="flex justify-center mt-4">
         <button (click)="closeSimulation()"
             class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
