--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -21,6 +21,9 @@
       @if (route.data['name'] == "Inicio" && role == "USER") {
       <p class="px-2 font-semibold text-zorba pb-1 pt-3">TRIBUTACIÓN</p>
       }
+      @if (route.data['name'] == "Notificaciones" && role == "USER") {
+      <p class="px-2 font-semibold text-zorba pb-1 pt-3">ANALÍTICAS</p>
+      }
       }
       }
     </nav>
