Update button styles and report titles in reports UI
Added hover effects to report action buttons for improved interactivity. Updated report section titles for clarity and corrected a typo in 'Gastos por categoría'.

--- a/src/app/components/card-report/card-report.component.html
+++ b/src/app/components/card-report/card-report.component.html
@@ -6,6 +6,7 @@
         <h1 class="text-bisque font-bold text-2xl text-center">{{ title }}</h1>
         <p class="text-bisque font-thin text-justify">{{ description }} </p>
     </div>
-    <button class="bg-flamenco py-2 px-4 rounded-md text-bisque font-bold" (click)="onButtonClick()">{{ buttonText
+    <button class="bg-flamenco hover:bg-golden-glow hover:text-flamenco py-2 px-4 rounded-md text-bisque font-bold"
+        (click)="onButtonClick()">{{ buttonText
         }}</button>
 </div>
