--- a/src/app/components/card-menu/card-menu.component.html
+++ b/src/app/components/card-menu/card-menu.component.html
@@ -1,4 +1,5 @@
-<div [ngClass]="[backgroundColor, 'p-6 rounded-md h-full flex flex-col justify-center items-center']">
+<div
+    [ngClass]="[backgroundColor, 'p-6 rounded-md h-full flex flex-col justify-center items-center border border-crater-brown/30']">
     <div class="w-fit">
         <div class="flex flex-row space-x-2 mb-2">
             @for(icon of icons; track $index) {
