--- a/src/app/components/card-report/card-report.component.html
+++ b/src/app/components/card-report/card-report.component.html
@@ -1,12 +1,14 @@
-<div class="bg-crater-brown p-5 rounded-md flex flex-col items-center justify-center space-y-4 h-[27rem]">
-    <span class="material-symbols-rounded text-7xl text-bisque">
+<div [ngClass]="bgColor"
+    class="p-6 rounded-md flex flex-col items-center justify-center space-y-4 h-[27rem] border border-crater-brown/30">
+    <span [ngClass]="textColor" class="material-symbols-rounded text-7xl">
         {{icon}}
     </span>
     <div class="flex flex-col items-center justify-center space-y-2">
-        <h1 class="text-bisque font-bold text-2xl text-center">{{ title }}</h1>
-        <p class="text-bisque font-thin text-justify">{{ description }} </p>
+        <h1 [ngClass]="textColor" class="font-bold text-2xl text-center">{{ title }}</h1>
+        <p [ngClass]="textColor" class="font-thin text-justify">{{ description }} </p>
     </div>
-    <button class="bg-flamenco hover:bg-golden-glow hover:text-flamenco py-2 px-4 rounded-md text-bisque font-bold"
+    <button
+        [ngClass]="textColor + ' ' + bgButtonColor + ' ' + bgButtonHoverColor + ' ' + bgButtonTextHoverColor + ' px-6 py-2 rounded-md font-bold text-lg'"
         (click)="onButtonClick()">{{ buttonText
         }}</button>
 </div>
