--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,8 @@
     </h1>
 
     <div class="grid [grid-template-columns:1fr_2fr] gap-4 w-full h-full px-4 max-w-screen-2xl">
-        <div class="flex flex-col justify-center items-center bg-bisque rounded-md h-full w-full px-8 py-6 2xl:px-12">
+        <div
+            class="flex flex-col justify-center items-center bg-bisque rounded-md h-full w-full px-8 py-6 2xl:px-12 border border-crater-brown/30">
             <div class="w-fit justify-end items-end">
                 <div class="flex justify-center items-center w-full">
                     <img src=" ../../../../../assets/img/homepage/messages-illustration.png"
@@ -70,7 +71,10 @@
             <app-card [icons]="['bar_chart', 'target']" [iconsColor]="'text-bisque'" [backgroundColor]="'bg-flamenco'"
                 [title]="'ACCEDE A INFORMACION VISUAL DE TUS FINANZAS Y ESTABLECE METAS.'"
                 [textColor]="'text-crater-brown'"
-                [description]="'Visualiza tus ingresos y egresos mensuales, flujo de caja, distribución de egresos por categoría y otros indicadores clave. Además, crea metas personalizadas basadas en tu historial para mejorar tu salud financiera.'" />
+                [description]="'Visualiza tus ingresos y egresos mensuales, flujo de caja, distribución de egresos por categoría y otros indicadores clave. Además, crea metas personalizadas basadas en tu historial para mejorar tu salud financiera.'"
+                [firstButtonText]="'Reportes'" [firstButtonRoute]="'reports'" [firstButtonBackgroundColor]="'bg-bisque'"
+                [firstButtonTextColor]="'text-crater-brown'" [firstButtonHoverBgColor]="'hover:bg-crater-brown'"
+                [firstButtonHoverTextColor]="'hover:text-bisque'" />
             } @else {
             <app-card [icons]="['bar_chart_4_bars']" [iconsColor]="'text-bisque'" [backgroundColor]="'bg-flamenco'"
                 [title]="'VISUALIZA REPORTES DEL SISTEMA CON DATOS CLAVE.'" [textColor]="'text-crater-brown'"
