--- a/src/app/components/notification-form/notification-form.component.html
+++ b/src/app/components/notification-form/notification-form.component.html
@@ -45,9 +45,9 @@
 
         <div class="ml-4">
             <div class="mb-2">
-                <label class="block my-2 text-base font-bold text-bisque" for="date">Fecha y Hora Finalización<span
+                <label class="block my-2 text-base font-bold text-bisque" for="date">Fecha Finalización<span
                         class="text-burnt-umber">*</span></label>
-                <input id="date" formControlName="date" type="datetime-local"
+                <input id="date" formControlName="date" type="date"
                     class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md block w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow">
 
                 <div class="min-h-[1.5rem]">
