Refactor ISR simulation into modular components
Replaces the monolithic isr-simulation component and its section subcomponent with dedicated, standalone components for each section: general data, assets and liabilities, income, costs/expenses/deductions, tax base, credits, and settlement of tax debt. Updates related templates and removes obsolete files. Also refactors manual invoice form logic to use a simpler type management and improves autocomplete handling.

--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -56,45 +56,56 @@
 </form>
 } @else {
 @defer {
-<div>
-    <app-isr-simulation [simulationPeriod]="isrSimulation.simulationPeriod"
-        [simulationName]="isrSimulation.simulationName"
-        [simulationIdentification]="isrSimulation.simulationIdentification"
-        [currentAssets]="isrSimulation.currentAssets" [equityInvestments]="isrSimulation.equityInvestments"
-        [inventory]="isrSimulation.inventory" [netFixedAssets]="isrSimulation.netFixedAssets"
-        [totalNetAssets]="isrSimulation.totalNetAssets" [totalLiabilities]="isrSimulation.totalLiabilities"
-        [netEquity]="isrSimulation.netEquity" [salesRevenue]="isrSimulation.salesRevenue"
-        [professionalFees]="isrSimulation.professionalFees" [commissions]="isrSimulation.commissions"
-        [interestsAndYields]="isrSimulation.interestsAndYields" [dividendsAndShares]="isrSimulation.dividendsAndShares"
-        [rents]="isrSimulation.rents" [otherIncome]="isrSimulation.otherIncome"
-        [nonTaxableIncome]="isrSimulation.nonTaxableIncome" [grossIncomeTotal]="isrSimulation.grossIncomeTotal"
-        [initialInventory]="isrSimulation.initialInventory" [purchases]="isrSimulation.purchases"
-        [finalInventory]="isrSimulation.finalInventory" [costOfGoodsSold]="isrSimulation.costOfGoodsSold"
-        [financialExpenses]="isrSimulation.financialExpenses"
-        [administrativeExpenses]="isrSimulation.administrativeExpenses"
-        [depreciationAndAmortization]="isrSimulation.depreciationAndAmortization"
-        [pensionContributions]="isrSimulation.pensionContributions"
-        [otherAllowableDeductions]="isrSimulation.otherAllowableDeductions"
-        [totalAllowableDeductions]="isrSimulation.totalAllowableDeductions"
-        [netTaxableIncome]="isrSimulation.netTaxableIncome"
-        [nonTaxableSalaryAmount]="isrSimulation.nonTaxableSalaryAmount" [incomeTax]="isrSimulation.incomeTax"
-        [freeTradeZoneExemption]="isrSimulation.freeTradeZoneExemption"
-        [otherExemptions]="isrSimulation.otherExemptions"
-        [netIncomeTaxAfterExemptions]="isrSimulation.netIncomeTaxAfterExemptions"
-        [familyCredit]="isrSimulation.familyCredit" [otherCredits]="isrSimulation.otherCredits"
-        [periodTax]="isrSimulation.periodTax" [twoPercentWithholdings]="isrSimulation.twoPercentWithholdings"
-        [otherWithholdings]="isrSimulation.otherWithholdings" [partialPayments]="isrSimulation.partialPayments"
-        [totalNetTax]="isrSimulation.totalNetTax" [interests]="isrSimulation.interests"
-        [totalTaxDebt]="isrSimulation.totalTaxDebt" [requestedCompensation]="isrSimulation.requestedCompensation"
-        [totalDebtToPay]="isrSimulation.totalDebtToPay" />
-    <div class="flex justify-center mt-4">
-        <button (click)="closeSimulation()"
-            class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
-            Regresar
-        </button>
+<div class="w-full">
+    <div class="flex flex-col w-full space-y-10">
+        <app-general-data [simulationPeriod]="isrSimulation.simulationPeriod"
+            [simulationName]="isrSimulation.simulationName"
+            [simulationIdentification]="isrSimulation.simulationIdentification">
+        </app-general-data>
+        <app-assets-liabilities [currentAssets]="isrSimulation.currentAssets"
+            [equityInvestments]="isrSimulation.equityInvestments" [inventory]="isrSimulation.inventory"
+            [netFixedAssets]="isrSimulation.netFixedAssets" [totalNetAssets]="isrSimulation.totalNetAssets"
+            [totalLiabilities]="isrSimulation.totalLiabilities" [netEquity]="isrSimulation.netEquity">
+        </app-assets-liabilities>
+        <app-income [salesRevenue]="isrSimulation.salesRevenue" [professionalFees]="isrSimulation.professionalFees"
+            [commissions]="isrSimulation.commissions" [interestsAndYields]="isrSimulation.interestsAndYields"
+            [dividendsAndShares]="isrSimulation.dividendsAndShares" [rents]="isrSimulation.rents"
+            [otherIncome]="isrSimulation.otherIncome" [nonTaxableIncome]="isrSimulation.nonTaxableIncome"
+            [grossIncomeTotal]="isrSimulation.grossIncomeTotal">
+        </app-income>
+        <app-costs-expenses-deductions [initialInventory]="isrSimulation.initialInventory"
+            [purchases]="isrSimulation.purchases" [finalInventory]="isrSimulation.finalInventory"
+            [costOfGoodsSold]="isrSimulation.costOfGoodsSold" [financialExpenses]="isrSimulation.financialExpenses"
+            [administrativeExpenses]="isrSimulation.administrativeExpenses"
+            [depreciationAndAmortization]="isrSimulation.depreciationAndAmortization"
+            [pensionContributions]="isrSimulation.pensionContributions"
+            [otherAllowableDeductions]="isrSimulation.otherAllowableDeductions"
+            [totalAllowableDeductions]="isrSimulation.totalAllowableDeductions">
+        </app-costs-expenses-deductions>
+        <app-tax-base [netTaxableIncome]="isrSimulation.netTaxableIncome"
+            [nonTaxableSalaryAmount]="isrSimulation.nonTaxableSalaryAmount" [incomeTax]="isrSimulation.incomeTax"
+            [freeTradeZoneExemption]="isrSimulation.freeTradeZoneExemption"
+            [otherExemptions]="isrSimulation.otherExemptions"
+            [netIncomeTaxAfterExemptions]="isrSimulation.netIncomeTaxAfterExemptions">
+        </app-tax-base>
+        <app-credits [familyCredit]="isrSimulation.familyCredit" [otherCredits]="isrSimulation.otherCredits"
+            [periodTax]="isrSimulation.periodTax" [twoPercentWithholdings]="isrSimulation.twoPercentWithholdings"
+            [otherWithholdings]="isrSimulation.otherWithholdings" [partialPayments]="isrSimulation.partialPayments"
+            [totalNetTax]="isrSimulation.totalNetTax">
+        </app-credits>
+        <app-settlement-tax-debt [interests]="isrSimulation.interests" [totalTaxDebt]="isrSimulation.totalTaxDebt"
+            [requestedCompensation]="isrSimulation.requestedCompensation"
+            [totalDebtToPay]="isrSimulation.totalDebtToPay">
+        </app-settlement-tax-debt>
+        <div class="flex justify-center mt-4">
+            <button (click)="closeSimulation()"
+                class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
+                Regresar
+            </button>
+        </div>
     </div>
 </div>
-} @loading (minimum 1.5s){
+} @loading (minimum 1s){
 <app-loader></app-loader>
 }
 }
