--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -4,26 +4,26 @@
     </div>
     <div class="grid grid-cols-3 gap-2 py-4">
         <div class="col-span-1 border-bisque/30 border rounded-md p-2 h-[43rem] overflow-y-auto">
-            @for( notification of notifications; track notification.id) {
+            @for( item of notifications(); track item.id) {
             <div
                 class="flex flex-col items-start py-2 pr-4 hover:bg-zorba transition-colors rounded-md cursor-pointer w-full">
                 <div class="flex flex-row items-center px-2 min-w-0 w-full">
                     <span class="material-symbols-rounded text-bisque text-xl px-2">
                         {{
-                        notification.type === 'message'
+                        item.type === 'message'
                         ? 'message'
-                        : notification.type === 'update'
+                        : item.type === 'update'
                         ? 'update'
                         : 'warning'
                         }}
                     </span>
                     <div class="ml-2 min-w-0 w-full">
-                        <p class="font-bold text-bisque">{{ notification.title }}</p>
+                        <p class="font-bold text-bisque">{{ item.name }}</p>
                         <p class="text-sm text-bisque truncate whitespace-nowrap overflow-hidden text-ellipsis">
-                            {{ notification.message }}
+                            {{ item.description }}
                         </p>
                         <span class="text-xs text-bisque/70">
-                            {{ notification.timestamp | date: 'dd/MM/yyyy' }}
+                            {{ item.closeDate | date: 'dd/MM/yyyy' }}
                         </span>
                     </div>
                 </div>
